[package]
name = "rust-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Perbaikan nama fitur di sini: "rustls"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Tetap gunakan nipper untuk DOM
nipper = "0.1"

# Batasi fitur image hanya yang kamu butuhkan
image = { version = "0.25", default-features = false, features = ["webp", "jpeg", "png"] }
webp = "0.3"
url = "2"
walkdir = "2"
regex = "1"
anyhow = "1"
minify-html = "0.15.0"

[dependencies]
atrium-api = "0.20.0"
atrium-xrpc-client = "0.1.0"
tokio = { version = "1", features = ["full"] }


[profile.release]
opt-level = 'z'     # Fokus kecilkan ukuran
lto = true          # Buang fungsi yang tidak terpakai
codegen-units = 1   # Optimasi lebih maksimal
panic = 'abort'     # Buang fitur error recovery yang berat
strip = true        # Otomatis hapus simbol debug (sangat ampuh potong size)

[[bin]]
name = "seo-fixer"
path = "alat/seo-fixer.rs"

[[bin]]
name = "clean-schema"
path = "alat/clean-schema.rs"

[[bin]]
name = "generator-pro"
path = "alat/generator-pro.rs"

[[bin]]
name = "inject-schema"
path = "alat/inject-schema.rs"

[[bin]]
name = "html-to-markdown"
path = "alat/html-to-markdown.rs"

[[bin]]
name = "minify-html"
path = "alat/minify-html.rs"

[[bin]]
name = "minify-jsonxml"
path = "alat/minify-jsonxml.rs"

[[bin]]
name = "sitemap-txt"
path = "alat/sitemap-txt.rs"

[[bin]]
name = "inject-script"
path = "alat/inject-script.rs"

[[bin]]
name = "post-to-bluesky"
path = "alat/post-to-bluesky.rs"






