[package]
name = "rust-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
atrium-api = { version = "0.25.7", features = ["agent"] }
atrium-xrpc-client = "0.5.5"
chrono = "0.4"
image = { version = "0.25", features = ["webp", "jpeg", "png"] }
ipld-core = "0.4.3"
minify-html = "0.18.0"
nipper = "0.1"
oauth1 = "1.0"
rayon = "1.10"
regex = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2"
walkdir = "2"
webp = "0.3"






[profile.release]
opt-level = 'z'     # Fokus kecilkan ukuran
lto = true          # Buang fungsi yang tidak terpakai
codegen-units = 1   # Optimasi lebih maksimal
panic = 'abort'     # Buang fitur error recovery yang berat
strip = true        # Otomatis hapus simbol debug (sangat ampuh potong size)

[[bin]]
name = "seo-fixer"
path = "alat/seo-fixer.rs"

[[bin]]
name = "clean-schema"
path = "alat/clean-schema.rs"

[[bin]]
name = "generator-pro"
path = "alat/generator-pro.rs"

[[bin]]
name = "inject-schema"
path = "alat/inject-schema.rs"

[[bin]]
name = "html-to-markdown"
path = "alat/html-to-markdown.rs"

[[bin]]
name = "minify-html"
path = "alat/minify-html.rs"

[[bin]]
name = "minify-jsonxml"
path = "alat/minify-jsonxml.rs"

[[bin]]
name = "sitemap-txt"
path = "alat/sitemap-txt.rs"

[[bin]]
name = "inject-script"
path = "alat/inject-script.rs"

[[bin]]
name = "post-to-discord"
path = "alat/post-to-discord.rs"

[[bin]]
name = "post-to-tumblr"
path = "alat/post-to-tumblr.rs"




