[package]
name = "rust-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- CORE TOOLS (Yang muncul di grep) ---
anyhow = "1.0"
rayon = "1.10"
regex = "1.10"
serde_json = "1.0"
url = "2.5"
walkdir = "2.5"
nipper = "0.1.9"
minify-html = "0.15.0" # Pakai versi stabil

# --- OPTIMASI CHRONO (Tanpa fitur berat) ---
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }

# --- OPTIMASI SERDE ---
serde = { version = "1.0", features = ["derive"] }

# --- OPTIMASI NETWORK & ASYNC (Penyebab utama build lama) ---
# Matikan default-features tokio. Jangan pakai "full" kalau cuma buat request simpel.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] } 
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# --- SOCIAL MEDIA & IMAGE (Hanya aktifkan jika benar-benar dipakai) ---
atrium-api = { version = "0.25.7", optional = true }
atrium-xrpc-client = { version = "0.5.5", optional = true }
image = { version = "0.25", default-features = false, features = ["webp", "jpeg", "png"], optional = true }
webp = { version = "0.3", optional = true }
oauth1 = { version = "1.0", optional = true }
ipld-core = { version = "0.4.3", optional = true }

[profile.release]
# Ganti dari 'z' ke 3 kalau mau eksekusi generator lebih kencang. 
# 'z' bikin file kecil tapi kadang proses looping (seperti sitemap) jadi lebih lambat.
opt-level = 3        
lto = "thin"         # 'thin' lebih cepat build-nya daripada 'true/fat' tapi hampir sama kencangnya
codegen-units = 16   # Naikkan ke 16 agar build lebih paralel (lebih cepat di GitHub Actions)
panic = 'abort'
strip = true


[[bin]]
name = "seo-fixer"
path = "alat/seo-fixer.rs"

[[bin]]
name = "clean-schema"
path = "alat/clean-schema.rs"

[[bin]]
name = "generator-pro"
path = "alat/generator-pro.rs"

[[bin]]
name = "inject-schema"
path = "alat/inject-schema.rs"

[[bin]]
name = "html-to-markdown"
path = "alat/html-to-markdown.rs"

[[bin]]
name = "minify-html"
path = "alat/minify-html.rs"

[[bin]]
name = "minify-jsonxml"
path = "alat/minify-jsonxml.rs"

[[bin]]
name = "sitemap-txt"
path = "alat/sitemap-txt.rs"

[[bin]]
name = "inject-script"
path = "alat/inject-script.rs"

#[[bin]]
#name = "post-to-discord"
#path = "alat/post-to-discord.rs"

#[[bin]]
#name = "post-to-tumblr"
#path = "alat/post-to-tumblr.rs"




