[package]
name = "rust-tools"
version = "0.1.0"
edition = "2024"

[dependencies]

# Untuk async runtime (wajib buat urusan network/file)
tokio = { version = "1", features = ["full"] }

# Untuk HTTP request (gantinya Axios)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Untuk urusan manipulasi HTML kilat
lol_html = "0.4.0"

# Untuk mencari file (gantinya glob di node)
glob = "0.3"

# Untuk urusan URL parsing
url = "2.5"

# Untuk urusan gambar (gantinya sharp)
image = "0.24"
webp = "0.2"

# Untuk handle error supaya kodenya nggak berantakan
anyhow = "1"

scraper = "0.18"
